# huruli_fdw

./: Cargo.toml  README.md  local-dev.sh
.github/workflows/: release_wasm_fdw.yml
src/: lib.rs
wit/: world.wit
