[package]
name = "huruli_fdw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
serde_json = "1.0"
serde_derive = "1.0.218"
serde = { version = "1.0.218", features = ["serde_derive"] }

[package.metadata.component]
package = "huruli:huruli-fdw"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
